2002-08-29  Wakaba <w@suika.fam.cx>

	* Bunshin.pm:
	- (make_msgs): Prepend '#' to misc_.*color.* property
	value if desirable.  (There are HTML documents with
	color name of 'HHHHHH' without '#':-<)
	- Update Message::Field::Date interface with its latest
	revision.

2002-07-24  Wakaba <w@suika.fam.cx>

	* Bunshin.pm:
	- (_get_resource): New.
	- (set_source): Moved main process to _get_resource.
	- (_get_resource, set_source): Set protocol's meta information
	to $self->{meta_info}.
	- (meta_information): New method.

2002-06-20  wakaba <w@suika.fam.cx>

	* Bunshin.pm (_make_a_msg): Message-id algorithm
	is revised to avoid conflict.

2002-06-16  wakaba <w@suika.fam.cx>

	* Bunshin.pm: New module.
	* ChangeLog: New file.