@@ -1,3 +1,7 @@
+2002-09-11  Wakaba <w@suika.fam.cx>
+
+	* Bunshin.pm (set_element_decoders): New method.
+
 2002-08-29  Wakaba <w@suika.fam.cx>
 
 	* Bunshin.pm:
